--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "author": "Renemari Padillo",
   "license": "MIT",
   "dependencies": {
-    "discord.io": "^2.5.1",
-    "winston": "^2.3.1"
+    "discord.io": "github:woor/discord.io#gateway_v6",
+    "discord.js": "^11.3.2",
+    "winston": "^2.4.1"
   }
 }
